Fix CLI run for adding documents to marqo. Edit explorer to hide horizontal scrollbar on div

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -67,3 +67,14 @@
   background: #5189a7; /* Slightly lighter color on hover */
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scrollbar-hide {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
